# LabProject25

./: README.md  buffer.txt  main.py  mlflow.db  pyproject.toml  requirements.txt  ssh public key  ssh public key.pub
artifacts/0/0f591b5ad7af487c8800bcb250401111/artifacts/: GBTClassifier_evaluation_report.json
artifacts/0/100a08310242411792596d62f5c8a256/artifacts/: RandomForestClassifier_evaluation_report.json
artifacts/0/2ec06ec2f51f47d8a6a0a0f0fbb75496/artifacts/: LinearSVC_evaluation_report.json
artifacts/0/55320848fd2c4e63adbe849d6ec298b7/artifacts/: RandomForestClassifier_evaluation_report.json
artifacts/0/6293743ca9bd4881b873d39c82a0b74e/artifacts/: DecisionTreeClassifier_evaluation_report.json
artifacts/0/668216f9ae034598bf9f3f7125831556/artifacts/: RandomForestClassifier_evaluation_report.json
artifacts_temp/evaluation_report/: NaiveBayes_evaluation_report.json  RandomForestClassifier_evaluation_report.json
deployment/: scheduler.py  test.py
deployment/.ipynb_checkpoints/: application-checkpoint.py  drift_detection-checkpoint.py
deployment/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
deployment/model/sparkml/metadata/: .part-00000.crc  part-00000
mlruns/0/: meta.yaml
src/classification_model/: preprocessing.py  ref_profile.py  spark_Session.py  train.ipynb
src/classification_model/.ipynb_checkpoints/: deployment-checkpoint.py  train-checkpoint.ipynb  train-checkpoint.py
src/classification_model/deployment/: reference_profile.json
src/my_classification_model.egg-info/: PKG-INFO  SOURCES.txt
(+521 files in other folders)
